--- a/scripts/buildspec.yml
+++ b/scripts/buildspec.yml
@@ -12,16 +12,16 @@ phases:
   install:
     runtime-versions:
       nodejs: 10
-  #commands:
-    # - npm install
+  commands:
+    - npm install
     # - command
   #finally:
     # - command
     # - command
 
-pre_build:
-  commands:
-      - npm install
+#pre_build:
+  #commands:
+      # - npm install
     # - command
   #finally:
     # - command
