--- a/scripts/buildspec.yml
+++ b/scripts/buildspec.yml
@@ -12,8 +12,8 @@ phases:
   install:
     runtime-versions:
       nodejs: 10
-  commands:
-    - npm install
+  # commands:
+    # - npm install
     # - command
   #finally:
     # - command
@@ -28,6 +28,7 @@ phases:
     # - command
 build:
   commands:
+    - npm install
     - npm run bundle
     - echo "Build Done!"
     # - command
