--- a/scripts/buildspec.yml
+++ b/scripts/buildspec.yml
@@ -45,11 +45,11 @@ phases:
     # - command
 artifacts:
     files:
-      - '**/*'
+      - build*/**
   # - location
   # - name
 #discard-paths: yes
-base-directory: 'build/'
+#base-directory: 'build/'
 #cache:
 #paths:
     # - .git
