--- a/scripts/buildspec.yml
+++ b/scripts/buildspec.yml
@@ -39,7 +39,7 @@ phases:
   post_build:
     commands:
       - mkdir build/static_assets/
-      - sudo cp -R static_assets build/static_assets/
+      - cp -R static_assets build/static_assets/
       - echo "VR-INFO ----- Assets moved!"
   #finally:
     # - command
