--- a/scripts/buildspec.yml
+++ b/scripts/buildspec.yml
@@ -47,9 +47,10 @@ phases:
 artifacts:
   files:
     - build*/**
+  # - location
   # - name
 #discard-paths: yes
-  # base-directory: '/'
+#base-directory: 'build/'
 #cache:
   paths:
     - static_assets*/**
